feat: support java 1.8